package cars.Observer;

public class FiatMultipla extends Car {
    public FiatMultipla() {
    }

    public String honk() {
        return "Klaxon : Biiiiiiiiiiiippppp !";
    }

    public String speedUp() {
        return "Acceleration : Vrouuuuuuuummmm !";
    }
}
